# MLO_Project

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.train  README.md  build_and_push.sh  cloudbuild.yaml  data.dvc  load_test.sh  main.py  prediction_database.csv  pyproject.toml  quick_start_vertex_ai.sh  tet.txt  upload_data_to_gcs.py  vertex_ai_train.py
.dvc/: config
.github/workflows/: ci.yml  codecheck.yaml  docker-image2.yml  docker-publish.yml
en_es_translation/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  tasks.py
en_es_translation/configs/: config.yaml
en_es_translation/configs/data/: data.yaml  data_2.yaml
en_es_translation/configs/model/: model.yaml  model_2.yaml
en_es_translation/configs/train/: train.yaml  train_2.yaml
en_es_translation/reports/: README.md
en_es_translation/src/en_es_translation/: api.py  data.py  evaluate.py  gcs_checkpoint_callback.py  model.py  my_logger.py  predict.py  quantization_experiment.py  sweep.yaml  train.py  utils.py
en_es_translation/tests/: test_api.py  test_data.py  test_model.py
frontend/: app.py
reports/: README.md
