[project]
name = "mlo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
]
