[project]
name = "mlo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "fastapi[standard]>=0.128.0",
    "hydra-core>=1.3.0",
    "pytorch-lightning>=2.6.0",
    "ruff>=0.14.13",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.5",
    "typer>=0.21.1",
    "wandb>=0.24.0",
]

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.uv]
package = true

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["en_es_translation"]

[project.scripts]
train = "en_es_translation.train:train"
api = "en_es_translation.api:main"
